Added media for sections about, contact, reviews

--- a/src/index.html
+++ b/src/index.html
@@ -311,7 +311,7 @@
 			</div>
 		</div>	
 	</section>
-	<!-- <section class="about" id="about">
+	<section class="about" id="about">
 		<div class="container">
 			<div class="about_title">
 				<div class="title">about us</div>
@@ -324,16 +324,16 @@
 			</div>
 			<div class="line"></div>
 				<div class="about_descr">
-					<div class="about_item">
-						<div class="about_item_title big_title">YOTA Appliance Repair is a leading appliance <br>repair company in Houston. </div>
+					<div class="about_item item_1">
+						<div class="about_item_title big_title">YOTA Appliance Repair is a leading appliance repair company in Houston. </div>
 						<div class="about_item_text compact_text">We are a locally-based, family-owned business that builds the local community in Northern Houston with professional and transparent appliance repair job.</div>
 					</div>
-					<div class="about_item">
+					<div class="about_item item_2">
 						<div class="about_item_title">YOTA Appliance Repair takes pride in being an integral part of the Houston community. </div>
 						<div class="about_item_text">We are a local-based company, and we recognize that our work bolsters the well-being of the local people. Our dedication to building our community pushes us to improve and expand our services to every home in the Houston area.
 							<br> <br> If any of your household appliances in Houston start malfunctioning, YOTA Appliance Repair aim to provide professional and cost-effective services tailored to your needs. Do not hesitate to book a service with us. We will surely give you services so good that you will tell others.</p> </div>
 					</div>
-					<div class="about_item">
+					<div class="about_item item_3">
 						<div class="about_item_title">YOTA Appliance repair is founded on passion, competence, and experience. </div>
 						<div class="about_item_text">We value the most: results, trust, mastery and opportunities. We strive to offer the best services to our customers in Woodlands, Kingwood and Spring. Yota Appliance Repair is dedicated to using all available resources to provide top-quality repairs and rectify faulty appliances.
 							<br> <br> The company has local experts that you can trust. We're grateful for the trust our customers have in us to keep their homes comfortable and their appliances running. All we care about is your comfort. For that reason, the company streamlines its services to guarantee 100% customer satisfaction.</div>
@@ -349,8 +349,8 @@
 			<div class="line"></div>
 			<div class="contact_wrapper">
 				<div class="contact_images">
-					<img src="@img/fix.png" alt="fixing">
-					<img src="@img/dishwasher.png" alt="dishwasher">
+					<div class="contact_image"><img src="@img/fix.png" alt="fixing"></div>
+					<div class="contact_image image_none"><img src="@img/dishwasher.png" alt="dishwasher"></div>
 				</div>
 				<div class="contact_form">
 					<form id="form2" action="#">
@@ -376,7 +376,7 @@
 	</section>
 	<section class="reviews">
 		<div class="container">
-			<div class="title">What Our Clients <br> & <span>PARTNERS Have <br> to Say</span></div>
+			<div class="title">What Our Clients & <span>PARTNERS Have to Say</span></div>
 			<div class="slider swiper">
 				<div class="slider_items swiper-wrapper">
 					<div class="slider_item swiper-slide">
@@ -425,9 +425,54 @@
 				<div class="swiper-button-prev"></div>
 				<div class="swiper-button-next"></div>
 			</div>
+			<div class="slider_min">
+				<div class="slider_min_items">
+					<div class="slider_item slider_item_visible">
+						<div class="slider_item_name">John Davis</div>
+						<div class="slider_item_text">"Yota Appliance Repair came to my rescue when my refrigerator stopped working. They were able to diagnose and fix the problem quickly, and their prices were very reasonable."</div>
+					</div>
+					<div class="slider_item slider_item_visible">
+						<div class="slider_item_name">Emily Thompson</div>
+						<div class="slider_item_text">"I had a great experience with Yota Appliance Repair. Their technician was knowledgeable and professional, and they were able to fix my dishwasher in no time."</div>
+					</div>
+					<div class="slider_item slider_item_visible">
+						<div class="slider_item_name">Michael Rodriguez</div>
+						<div class="slider_item_text"> "I highly recommend Yota Appliance Repair for their excellent service and fair pricing. They fixed my washing machine, and now it works like new."</div>
+					</div>
+					<div class="slider_item">
+						<div class="slider_item_name">Samantha Brown</div>
+						<div class="slider_item_text"> "Yota Appliance Repair was a pleasure to work with. Their technician arrived on time, was very courteous, and fixed my wine cooler quickly and efficiently."</div>
+					</div>
+					<div class="slider_item">
+						<div class="slider_item_name">David Taylor</div>
+						<div class="slider_item_text">"I have used Yota Appliance Repair multiple times for various appliance repairs, and they have always been reliable and professional. I wouldn't hesitate to recommend them to anyone."</div>
+					</div>
+					<div class="slider_item">
+						<div class="slider_item_name">Sarah Lee</div>
+						<div class="slider_item_text">"I had a great experience with Yota Appliance Repair. Their technician was able to diagnose and fix the issue with my oven, and they provided helpful advice to prevent future problems."</div>
+					</div>
+					<div class="slider_item">
+						<div class="slider_item_name">Kevin Nguyen</div>
+						<div class="slider_item_text">"Yota Appliance Repair was able to fix my freezer quickly and at a reasonable cost. I appreciate their professionalism and expertise."</div>
+					</div>
+					<div class="slider_item">
+						<div class="slider_item_name">Jessica Williams</div>
+						<div class="slider_item_text">"I am so grateful to Yota Appliance Repair for fixing my range. Their technician was very friendly and knowledgeable, and they provided excellent service at a fair price."</div>
+					</div>
+					<div class="slider_item">
+						<div class="slider_item_name">Mark Johnson</div>
+						<div class="slider_item_text">"Yota Appliance Repair provided me with excellent service when my trash compactor stopped working. They were able to diagnose and fix the issue quickly, and their prices were very reasonable."</div>
+					</div>
+					<div class="slider_item">
+						<div class="slider_item_name">Rachel Smile</div>
+						<div class="slider_item_text">"I had a great experience with Yota Appliance Repair. Their technician arrived on time and fixed my dishwasher, and they even gave me some tips on how to prevent future problems. I highly recommend them."</div>
+					</div>
+				</div>
+				<div class="reviews_button">READ MORE</div>
+			</div>
 		</div>
 	</section>
-	<section class="choice">
+	<!-- <section class="choice">
 		<div class="container">
 			<div class="title">Why Customers <br> Choose Us</div>
 			<div class="choice_items">
