Finished media for main page and service page

--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -14,7 +14,7 @@
 			</div>
 			<div class="footer_info">
 			<div class="footer_info_wrapper">
-				<div class="footer_menu">					
+				<div class="footer_menu footer_menu_1">					
 					<a class="footer_menu_name" href="#contacts">contact us</a>
 					<div class="footer_contacts">
 						<div class="footer_address">4576 Research Forest Dr Suite 200, The Woodlands, TX 77381</div>
