--- a/src/index.html
+++ b/src/index.html
@@ -472,11 +472,11 @@
 			</div>
 		</div>
 	</section>
-	<!-- <section class="choice">
+	<section class="choice">
 		<div class="container">
 			<div class="title">Why Customers <br> Choose Us</div>
 			<div class="choice_items">
-				<div class="choice_item">
+				<div class="choice_item ">
 					<img class="choice_item_icon" src="svgicons/Frame.svg" alt="frame">
 					<div class="choice_item_subtitle">Excellent Service</div>
 					<div class="choice_item_text">We do the job right the first time and with a smile on our faces. Only a sterling reputation in providing high-quality solutions of HVAC & Appliance services to our customers.</div>
@@ -486,7 +486,7 @@
 					<div class="choice_item_subtitle">Expert Technicians</div>
 					<div class="choice_item_text">Our team has certified and extensively trained technicians who have years of experience in troubleshooting even the most difficult HVAC and appliance problems.</div>
 				</div>
-				<div class="choice_item">
+				<div class="choice_item item_center">
 					<img class="choice_item_icon" src="svgicons/Star.svg" alt="star">
 					<div class="choice_item_subtitle">Fully Insured</div>
 					<div class="choice_item_text">Our team is fully insured, licensed and highly trained to do comprehensive repairs. Only affordable upfront prices and a seamless customer experience.</div>
@@ -524,6 +524,7 @@
 				<div class="brands_item"><img src="svgicons/brands/logo_24_kitchenaid.svg" alt="KitchenAid"></div>
 			</div>
 			<div class="line"></div>
+			<div class="brands_button">READ MORE</div>
 		</div>
 	</section>
 	@@include('html/areas.html')
@@ -542,7 +543,7 @@
 		</div>
 	</section>
 	@@include('html/call.html')
-	@@include('html/footer.html') -->
+	@@include('html/footer.html')
 	<script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
 	<script src="js/app.min.js"></script>
 </body>
