--- a/src/refrigerator.html
+++ b/src/refrigerator.html
@@ -3,12 +3,12 @@
 	@@include('html/header.html')
 	<section class="service-main">
 		<div class="container">
-			<img class="service-main_img" src="@img/services-page/refrigerator.png" alt="refrigerator">
+			<div class="service-main_img"><img  src="@img/services-page/refrigerator.png" alt="refrigerator"></div>
 			<div class="service-main_title">
 				<div class="title">REFRIGERATOR <br> <span>REPAIR SERVICE</span> </div>
-				<div class="service-main_text">
-					We offer the best home appliance repair services in San Diego County. We will repair and maintain your refrigerator in top working condition to ensure your special occasions go smoothly. Contact us on (619)988-3363 or book a fridge repair service online.
-				</div>
+			</div>
+			<div class="service-main_text">
+				We offer the best home appliance repair services in San Diego County. We will repair and maintain your refrigerator in top working condition to ensure your special occasions go smoothly. Contact us on (619)988-3363 or book a fridge repair service online.
 			</div>
 			<div class="form">
 				<form id="form-service" action="#">
@@ -34,12 +34,12 @@
 				<div class="problems_info">Our technicians are well trained and licensed to repair all types of refrigerator problems. Some of the most common refrigerator problems we repair include:</div>
 			</div>
 			<div class="problems_item">
-				<div class="problems_subtitle">
-					Refrigerator runs constantly
-					<img src="@img/services-page/refrig-open-door.png" alt="refrigerator">
+				<div class="problems_subtitle problems_subtitle_1">
+					<div>Refrigerator runs constantly</div>
+					<div class="problems_item_img"><img src="@img/services-page/refrig-open-door.png" alt="refrigerator"></div>  
 				</div>
 
-				<div class="problems_text">
+				<div class="problems_text problems_text_1">
 				<span>If your refrigerator cycles or runs constantly, it may require an expert's attention. The most common problem with a continuously running fridge is dirty condenser coils. The fridge is less efficient and consumes more power, leading to higher utility bills.</span>	
 			<span>Sometimes you may have set the fridge's temperature so low that it has to keep running to maintain the required temperature. Check that you have set the temperature correctly before calling your refrigerator repair provider.</span>
 			</div>
@@ -54,8 +54,7 @@
 			<div class="problems_item">
 				<div class="problems_subtitle">The refrigerator is leaking</div>
 				<div class="problems_text">
-				<span>Blocked drains or a clogged water supply line may cause leakage. Unblocking the drains or unclogging the supply line can fix the fridge.</span>	
-
+				<span>Blocked drains or a clogged water supply line may cause leakage. Unblocking the drains or unclogging the supply line can fix the fridge.</span>
 			</div>
 			</div>
 			<div class="problems_item">
@@ -93,7 +92,7 @@
 		<div class="container">
 			<div class="service-brands_header">
 				<div class="service-brands_title">
-					<div class="title"> Refrigerator brands <br> <span>we repair</span> </div>
+					<div class="title">Refrigerator brands<span> we repair</span></div>
 					<div class="subtitle">And many others</div>
 				</div>
 				<div class="service-brands_info">Our licensed technicians have experience repairing the most common refrigerator brands. We diagnose and fix all brands of refrigerators, including;</div>
@@ -117,8 +116,7 @@
 	@@include('html/areas.html')
 	<section class="book-service">
 		<div class="container">
-			<div class="title book-service_title">Trust the refrigerator repair 
-				experts</div>
+			<div class="title book-service_title">Trust the refrigerator repair experts</div>
 			<div class="book-service_wrapper">
 				<div class="book-service_descr">
 					Refrigerator repair is one of the many unexpected household expenses you may face. Not all refrigerator problems have an easy DIY fix, and sometimes you could do more damage than well by trying to fix your fridge. 
