--- a/src/html/areas.html
+++ b/src/html/areas.html
@@ -1,7 +1,7 @@
 <section class="areas" id="areas">
 	<div class="container">
 		<div class="areas_title">
-			<div class="title">AREAS WE <span>SERVE</span> </div>
+			<h2 class="title">AREAS WE <span>SERVE</span> </h2>
 			<div class="subtitle">Service area</div>
 		</div>
 		<div class="areas_list">
@@ -16,8 +16,8 @@
 				<li class="areas_city"> <span>08</span> <a href="spring.html">Tomball</a> </li>
 				<li class="areas_city"> <span>09</span> <a href="spring.html">Cypress</a> </li>
 				<li class="areas_city"> <span>10</span> <a href="spring.html">Egypt</a> </li>
-				<div class="line"></div>
 			</ol>
+			<div class="line"></div>
 		</div>
 	</div>
 </section>
