--- a/src/html/call.html
+++ b/src/html/call.html
@@ -1,7 +1,7 @@
 
 <section class="call">
 	<div class="container">
-		<div class="title">Need Your Home Appliances Fixed?</div>
+		<h2 class="title">Need Your Home Appliances Fixed?</h2>
 		<a href="book-a-service.html" class="button">book a service</a>
 		<div class="call_phone">or call (619) 988-3363</div>
 		<div class="line line_1"></div>
