--- a/src/html/head.html
+++ b/src/html/head.html
@@ -9,7 +9,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Fjalla+One&family=Inter&family=Open+Sans&display=swap" rel="stylesheet">
 	<!-- Swiper -->
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css">
 	<!-- Style file -->
 	<link rel="stylesheet" href="css/style.min.css">
 	<title>Yota Appliance Repair</title>
