--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,10 @@
 	@@include('html/header.html')
 	<section class="promo">
 		<div class="container">
-				<div class="title">HOME APPLIANCE <span>REPAIR SERVICES</span></div>
+				<h2 class="title">HOME APPLIANCE <span>REPAIR SERVICES</span></h2>
 				<div class="promo_descr">
 					<p>YOTA Appliance Repair seek to provide best in class professional and transparent appliance repair services, to achieve so we guarantee an honest and upfront quote for the repair job, based on the expert assessment of the appliance and experience we got.</p> 
 				</div>
-			</div>
 		</div>
 	</section>
 	<section class="main">
@@ -15,7 +14,7 @@
 			<div class="main_empty"></div>
 			<div class="main-form">
 				<form id="main-form" action="#">
-					<div class="title main-form_title">Book a service</div>
+					<h2 class="title main-form_title">Book a service</h2>
 					<div class="form_item">
 						<input class="main-form_input" type="text" placeholder="Full Name">
 					</div>
@@ -23,14 +22,15 @@
 						<input class="main-form_input" type="email" placeholder="email">
 					</div>
 					<div class="main-form_item">
-						<input class="main-form_input" type="phone" placeholder="phone">
+						<input class="main-form_input" type="tel" placeholder="phone">
 					</div>
 					<div class="main-form_item">
-						<textarea class="main-form_input" type="text" placeholder="massage"></textarea>
+						<textarea class="main-form_input" placeholder="massage"></textarea>
 					</div>
 					<button type="submit" class="button">submit</button>
 				</form>
 			</div>
+		</div>
 	</section>
 	<section class="services" id="services">
 		<div class="container">
@@ -45,7 +45,7 @@
 			<div class="line"></div>
 			<div class="services_second">
 				<div class="services_title">
-					<div class="title">Services</div>
+					<h2 class="title">Services</h2>
 					<div class="subtitle">Appliance Repair</div>
 				</div>
 				<div class="services_list_1">
@@ -56,7 +56,7 @@
 						<div class="services_img"><img src="@img/service/service-refrigerator.png" alt="Refrigerator"></div> 
 						<div class="services_text">Refrigerators are one of the most used home appliances, thats why it is so important to have professional home appliance repair services in your area. Your refrigerator helps keep food fresh long enough, but as with many home appliances, it can fail you when you need it most. For example, it may decide to break down before a special occasion, resulting in huge losses due to all the food gone bad.</div>
 						<div class="services_text">At YOTA Appliance Repair, we understand that refrigerators can fail you at any time, which is why we emphasize frequently getting your appliance serviced and maintained. Our team of appliance repair technicians will assess the issue with your refrigerator and fix it for you in no time. Some of the  repair issues we fix include a loud refrigerator, a broken ice maker, or a broken thermostat.</div>
-						<div class="services_button"><a class="button" href="refrigerator.html">read more</a></div>
+						<div class="services_button"><a class="button" href="page-refrigerator.html">read more</a></div>
 						<div class="line line_short"></div>
 					</div>
 					<div class="grid-hiderows services_item">
@@ -76,7 +76,7 @@
 						<div class="services_img"><img src="@img/service/service-dishwasher.png" alt="Dishwasher"></div>
 						<div class="services_text">A dishwasher is another essential appliance around the house. Everyone loves having clean dishes, so things can go into disarray if the dishwasher breaks down. If your dishwasher isn’t working well, contact YOTA HVAC & Appliance Repair service today to have our team of qualified home appliance repair professionals look into it. </div>
 						<div class="services_text">Alternatively, if you want to ensure your dishwasher serves you longer, our technicians can service it for you to check for any potential dishwasher repair issues and stop them before they happen.</div>
-						<div class="services_button"><a class="button" href="refrigerator.html">read more</a></div>
+						<div class="services_button"><a class="button" href="page-dishwasher.html">read more</a></div>
 <div class="line line_short"></div>
 					</div>
 					<div class="grid-hiderows services_item">
@@ -86,7 +86,7 @@
 					<div class="services_img"><img src="@img/service/service-wine.png" alt="Wine Cooler"></div>
 					<div class="services_text">Chilled wine pairs well with a cheese board but still holds its own perfectly, which is why a wine cooler is essential in the house. If your wine cooler hasn’t been working as efficiently as you want it to, it’s time to bring in our technicians to check it out. Our skilled appliance repair professionals will diagnose the wine cooler issue, fix it, and have you drinking chilled wine in no time. </div>
 					<div class="services_text"></div>
-					<div class="services_button"><a class="button" href="refrigerator.html">read more</a></div>
+					<div class="services_button"><a class="button" href="page-wine-cooler.html">read more</a></div>
 <div class="line line_short"></div>
 					</div>
 					<div class="grid-hiderows services_item">
@@ -96,7 +96,7 @@
 						<div class="services_img"><img src="@img/service/service-oven.png" alt="Oven"></div>
 						<div class="services_text">Every so often, your oven’s fan blades become dirty, thus limiting your appliance’s airflow. This, in turn, results in motor overheating, which becomes a fire hazard. Alternatively, your oven’s knobs and the door might get too hot, the appliance may burn the food, or the units adjacent may burn.</div>
 						<div class="services_text">If these sound like something you’re struggling with and need oven repair, get in touch with us today, and our appliance repair professionals will be happy to fix it for you.</div>
-						<div class="services_button"><a class="button" href="refrigerator.html">read more</a></div>
+						<div class="services_button"><a class="button" href="page-oven.html">read more</a></div>
 		<div class="line line_short"></div>
 					</div>
 					<div class="grid-hiderows services_item">
@@ -106,7 +106,7 @@
 						<div class="services_img"><img src="@img/service/service-trash.png" alt="Trash compactor"></div>
 						<div class="services_text">Your trash compactor is your mini garbage truck. It helps you get rid of the garbage before you take it out, thus keeping your household clean. But what happens when the trash compactor stops working or keeps running? There are several answers to why your trash compactor will fail, but the most common one is the breakdown of some important parts.</div>
 						<div class="services_text">This is why you need a trusted technician who can help you access the parts at an affordable price. At YOTA HVAC & Appliance Repair, our technicians will assess the situation, diagnose the problem and walk you through what needs to be done to get your trash compactor working again.</div>
-						<div class="services_button"><a class="button" href="refrigerator.html">read more</a></div>
+						<div class="services_button"><a class="button" href="page-trash-compactor.html">read more</a></div>
 			<div class="line line_short"></div>
 					</div>
 					<div class="grid-hiderows services_item">
@@ -116,7 +116,7 @@
 						<div class="services_img"><img src="@img/service/service-microvawe.png" alt="Microwave"></div>
 						<div class="services_text">If your microwave’s door won’t shut properly, the interior light is malfunctioning, or the center plate won’t rotate, your microwave might need some TLC from YOTA HVAC & Appliance Repair professional technicians. With the right microwave repair and frequent service, your home appliance will last you for years to come without the prospect of replacing new parts or buying a new one.</div>
 						<div class="services_text"></div>
-						<div class="services_button mb15"><a class="button" href="refrigerator.html">read more</a></div>
+						<div class="services_button mb15"><a class="button" href="page-microwave.html">read more</a></div>
 					</div>
 					<div class="line line_long"></div>
 					<div class="grid-hiderows services_item">
@@ -126,7 +126,7 @@
 						<div class="services_img"><img src="@img/service/service-dryer.png" alt="Dryer"></div>
 						<div class="services_text">Always check your dryer for issues before looking for appliances repair services. Check if your electric switch tripped on the dryer or if the gas supply stopped. To keep your dryer running, clean the build-up channel after every session. However, if any of the methods highlighted don’t work, get in touch with us, and we will not hesitate to do dryer repairs for you.</div>
 						<div class="services_text"></div>
-						<div class="services_button"><a class="button" href="refrigerator.html">read more</a></div>
+						<div class="services_button"><a class="button" href="page-dryer.html">read more</a></div>
 						<div class="line line_short"></div>
 					</div>
 					<div class="grid-hiderows services_item">
@@ -136,7 +136,7 @@
 						<div class="services_img"><img src="@img/service/service-wshing.png" alt="Washing machine"></div>
 						<div class="services_text">Your washing machines might run into some trouble which might leave you on the outs for a while. If your washer doesn’t flush accurately, is leaking, or doesn’t run, you need to call home appliance repair service immediately. Otherwise, you risk running into bigger problems with it, which may cost you a lot of money in the long run. You may also end up having to buy a new one which may not be in your budget at the time.</div>
 						<div class="services_text">At YOTA HVAC & Appliance Repair, we know how important your washer is and pride ourselves in providing efficient washing machine repair at a pocket-friendly price.</div>
-						<div class="services_button mb15"><a class="button" href="refrigerator.html">read more</a></div>
+						<div class="services_button mb15"><a class="button" href="page-washing.html">read more</a></div>
 					</div>
 					<div class="line line_long"></div>
 					<div class="grid-hiderows services_item">
@@ -146,7 +146,7 @@
 						<div class="services_img"><img src="@img/service/service-stove.png" alt="Stove"></div>
 						<div class="services_text">A stove typically lasts you a maximum of 15 years if well taken care of. While stoves are usually very reliable, there’s no telling when an issue will arise. The most common stove issue is the failure to ignite, which might be frustrating. However, there’s nothing to worry about with the right technician working on it. Our home appliance repair technicians will fix the stove repair problem promptly and get you back to everyday cooking.</div>
 						<div class="services_text"></div>
-						<div class="services_button mb15"><a class="button" href="refrigerator.html">read more</a></div>
+						<div class="services_button mb15"><a class="button" href="page-range.html">read more</a></div>
 					</div>
 					<div class="line line_long"></div>
 					<a class="button services_button" href="book-a-service.html">Book a service</a>
@@ -314,7 +314,7 @@
 	<section class="about" id="about">
 		<div class="container">
 			<div class="about_title">
-				<div class="title">about us</div>
+				<h2 class="title">about us</h2>
 				<div class="subtitle">HOUSTON APPLIANCE REPAIR COMPANY</div>
 			</div>
 			<div class="line"></div>
@@ -331,7 +331,7 @@
 					<div class="about_item item_2">
 						<div class="about_item_title">YOTA Appliance Repair takes pride in being an integral part of the Houston community. </div>
 						<div class="about_item_text">We are a local-based company, and we recognize that our work bolsters the well-being of the local people. Our dedication to building our community pushes us to improve and expand our services to every home in the Houston area.
-							<br> <br> If any of your household appliances in Houston start malfunctioning, YOTA Appliance Repair aim to provide professional and cost-effective services tailored to your needs. Do not hesitate to book a service with us. We will surely give you services so good that you will tell others.</p> </div>
+							<br> <br> If any of your household appliances in Houston start malfunctioning, YOTA Appliance Repair aim to provide professional and cost-effective services tailored to your needs. Do not hesitate to book a service with us. We will surely give you services so good that you will tell others.</div>
 					</div>
 					<div class="about_item item_3">
 						<div class="about_item_title">YOTA Appliance repair is founded on passion, competence, and experience. </div>
@@ -345,7 +345,7 @@
 	</section>
 	<section class="contact" id="contacts">
 		<div class="container">
-			<div class="title contact_title">CONTACT OUR SPECIALISTS</div>
+			<h2 class="title contact_title">CONTACT OUR SPECIALISTS</h2>
 			<div class="line"></div>
 			<div class="contact_wrapper">
 				<div class="contact_images">
@@ -362,7 +362,7 @@
 							<input required type="text" name ="email" class="contact_form_input" placeholder="email*">
 						</div>
 						<div class="contact_form_item">
-							<input required type="phone" name ="phone" class="contact_form_input" placeholder="phone*">
+							<input required type="tel" name ="phone" class="contact_form_input" placeholder="phone*">
 						</div>
 						<div class="contact_form_item">
 							<input type="text" name ="about" class="contact_form_input" placeholder="inquiry about">
@@ -376,7 +376,7 @@
 	</section>
 	<section class="reviews">
 		<div class="container">
-			<div class="title">What Our Clients & <span>PARTNERS Have to Say</span></div>
+			<h2 class="title">What Our Clients & <span>PARTNERS Have to Say</span></h2>
 			<div class="slider swiper">
 				<div class="slider_items swiper-wrapper">
 					<div class="slider_item swiper-slide">
@@ -474,7 +474,7 @@
 	</section>
 	<section class="choice">
 		<div class="container">
-			<div class="title">Why Customers <br> Choose Us</div>
+			<h2 class="title">Why Customers <br> Choose Us</h2>
 			<div class="choice_items">
 				<div class="choice_item ">
 					<img class="choice_item_icon" src="svgicons/Frame.svg" alt="frame">
@@ -496,7 +496,7 @@
 	</section>
 	<section class="brands">
 		<div class="container">
-			<div class="title">We fix all makes <br> & <span>models</span></div>
+			<h2 class="title">We fix all makes <br> & <span>models</span></h2>
 			<div class="brands_items">
 				<div class="brands_item"><img src="svgicons/brands/logo_1_maytag.svg" alt="logo_1_maytag"></div>
 				<div class="brands_item"><img src="svgicons/brands/logo_2_energy.svg" alt="general-electric"></div>
@@ -530,7 +530,7 @@
 	@@include('html/areas.html')
 	<section class="partners">
 		<div class="container">
-			<div class="title">Our partners</div>
+			<h2 class="title">Our partners</h2>
 			<div class="line"></div>
 			<div class="partners_list">
 				<div class="partners_icon"><img src="@img/icons-partners/assurant.png" alt="assurant"></div>
