--- a/src/page-refrigerator.html
+++ b/src/page-refrigerator.html
@@ -3,9 +3,9 @@
 	@@include('html/header.html')
 	<section class="service-main">
 		<div class="container">
-			<div class="service-main_img"><img  src="@img/services-page/refrigerator.png" alt="refrigerator"></div>
+			<div class="service-main_img"><img  src="@img/services-page/refrigerator-800x800.png" alt="refrigerator"></div>
 			<div class="service-main_title">
-				<div class="title">REFRIGERATOR <br> <span>REPAIR SERVICE</span> </div>
+				<h2 class="title">REFRIGERATOR <br> <span>REPAIR SERVICE</span> </h2>
 			</div>
 			<div class="service-main_text">
 				We offer the best home appliance repair services in San Diego County. We will repair and maintain your refrigerator in top working condition to ensure your special occasions go smoothly. Contact us on (619)988-3363 or book a fridge repair service online.
@@ -20,7 +20,7 @@
 						<input required type="text" name ="email" class="form_input" placeholder="email*">
 					</div>
 					<div class="form_item">
-						<input required type="phone" name ="phone" class="form_input" placeholder="phone*">
+						<input required type="tel" name ="phone" class="form_input" placeholder="phone*">
 					</div>
 					<button class="button" type="submit">submit</button>
 				</form>
@@ -30,7 +30,7 @@
 	<section class="problems">
 		<div class="container">
 			<div class="problems_title">
-				<div class="title"> <span>Common Refrigerator </span> <br> Problems We Fix</div>
+				<h2 class="title"> <span>Common Refrigerator </span> <br> Problems We Fix</h2>
 				<div class="problems_info">Our technicians are well trained and licensed to repair all types of refrigerator problems. Some of the most common refrigerator problems we repair include:</div>
 			</div>
 			<div class="problems_item">
@@ -92,10 +92,10 @@
 		<div class="container">
 			<div class="service-brands_header">
 				<div class="service-brands_title">
-					<div class="title">Refrigerator brands<span> we repair</span></div>
+					<h2 class="title">Refrigerator brands<span> we repair</span></h2>
 					<div class="subtitle">And many others</div>
 				</div>
-				<div class="service-brands_info">Our licensed technicians have experience repairing the most common refrigerator brands. We diagnose and fix all brands of refrigerators, including;</div>
+				<div class="service-brands_info">Our licensed technicians have experience repairing the most common refrigerator brands. We diagnose and fix all brands of refrigerators, including:</div>
 				</div>
 				<div class="line"></div>
 				<div class="service-brands_items">
@@ -109,14 +109,12 @@
 					<div class="service-brands_item"><img src="svgicons/brands/logo_2_energy.svg" alt="general-electrics"></div>
 					<div class="service-brands_item"><img src="svgicons/brands/logo_4_kenmore.svg" alt="kenmore"></div>
 				</div>
-			</div>
 		</div>
-
 	</section>
 	@@include('html/areas.html')
 	<section class="book-service">
 		<div class="container">
-			<div class="title book-service_title">Trust the refrigerator repair experts</div>
+			<h2 class="title book-service_title">Trust the refrigerator repair experts</h2>
 			<div class="book-service_wrapper">
 				<div class="book-service_descr">
 					Refrigerator repair is one of the many unexpected household expenses you may face. Not all refrigerator problems have an easy DIY fix, and sometimes you could do more damage than well by trying to fix your fridge. 
@@ -131,7 +129,7 @@
 	</section>
 	<section class="questions">
 		<div class="container">
-			<div class="title">Frequently Asked <br> <span>Questions</span> </div>
+			<h2 class="title">Frequently Asked <br> <span>Questions</span> </h2>
 			<div class="line"></div>
 			<div class="questions_items">
 				<div class="questions_item">
