--- a/src/spring.html
+++ b/src/spring.html
@@ -4,7 +4,7 @@
 	<section class="areas-promo">
 		<div class="container">
 			<div class="areas-promo_wrapper">
-				<div class="title">Appliance Repair Services in <span> Spring </span> </div>
+				<h2 class="title">Appliance Repair Services in <span> Spring </span> </h2>
 				<div class="form">
 					<form id="form-areas" action="#">
 						<div class="form_title">Book a service</div>
@@ -15,7 +15,7 @@
 							<input required type="text" name ="email" class="form_input" placeholder="email*">
 						</div>
 						<div class="form_item">
-							<input required type="phone" name ="phone" class="form_input" placeholder="phone*">
+							<input required type="tel" name ="phone" class="form_input" placeholder="phone*">
 						</div>
 						<button class="button" type="submit">submit</button>
 					</form>
@@ -29,13 +29,11 @@
 			<div class="line"></div>
 			<img class="areas-promo_img" src="@img/forest.png" alt="forest">
 			<div class="line"></div>
-			</div>
-
 		</div>
 	</section>
 	<section class="areas-repair">
 		<div class="container">
-			<div class="title"><span>Don't hesitate to contact our expert</span> <br> appliance repair services in Spring.</div>
+			<h2 class="title"><span>Don't hesitate to contact our expert</span> <br> appliance repair services in Spring.</h2>
 			<div class="line"></div>
 			<div class="areas-repair_items">
 				<div class="areas-repair_item">
@@ -104,12 +102,11 @@
 					</div>
 				</div>
 				<div class="areas-repair_item">
-					<div class="areas-repair_subtitle">Trash compactor repair services in 								Spring</div>
+					<div class="areas-repair_subtitle">Trash compactor repair services in Spring</div>
 					<div class="areas-repair_text">
-						<span>Yota Appliance Repair provides reliable trash compactor repair 									services in Spring. Our technicians have the expertise to 										diagnose and fix any trash compactor issues, ensuring that 											customers can dispose of their waste efficiently and effectively.<span>
+						<span>Yota Appliance Repair provides reliable trash compactor repair services in Spring. Our technicians have the expertise to diagnose and fix any trash compactor issues, ensuring that customers can dispose of their waste efficiently and effectively.</span>
 					</div>
 				</div>
-			</div>
 			</div>
 		</div>
 	</section>
