--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -24,34 +24,35 @@
 				</div>
 				<div class="footer_menu">
 					<a class="footer_menu_name" href="https://www.yota.annakondr.su/#about">About us</a>
-					<ul class="footer_menu_list"> 
+					<div class="footer_menu_list"> 
 						<a class="footer_menu_name" href="https://www.yota.annakondr.su/#services">appliance repair services</a>
-						<li> <a href="#">Trash compactor repair service </a></li>
-						<li> <a href="#">Refrigerator repair service </a></li>
-						<li> <a href="#">Freezer repair service </a></li>
-						<li> <a href="#">Dishwasher repair service </a></li>
-						<li> <a href="#">Washing machine repair service <a></li>
-						<li> <a href="#">Dryer repair service </a></li>
-						<li> <a href="#">Wine cooler repair service </a></li>
-						<li> <a href="#">Range repair service </a></li>
-						<li> <a href="#">Oven repair service </a></li>
-						<li> <a href="#">Microwave repair service </a></li>
-					</ul>
+						<a href="#">Trash compactor repair service </a>
+						<a href="#">Refrigerator repair service </a>
+						<a href="#">Freezer repair service </a>
+						<a href="#">Dishwasher repair service </a>
+						<a href="#">Washing machine repair service </a>
+						<a href="#">Dryer repair service </a>
+						<a href="#">Wine cooler repair service </a>
+						<a href="#">Range repair service </a>
+						<a href="#">Oven repair service </a>
+						<a href="#">Microwave repair service </a>
+					</div>
 				</div>
 				<div class="footer_menu">
-					<a class="footer_menu_name" href="https://www.yota.annakondr.su/#header">home</a>
-					<ul class="footer_menu_list"> 
-						<a class="footer_menu_name" href="https://www.yota.annakondr.su/#areas">service areas</a>
-						<li> <a href="https://www.yota.annakondr.su/spring">Egypt </a></li>
-						<li> <a href="https://www.yota.annakondr.su/spring">Spring </a></li>
-						<li> <a href="https://www.yota.annakondr.su/spring">Humble </a></li>
-						<li> <a href="https://www.yota.annakondr.su/spring">Woodland </a></li>
-						<li> <a href="https://www.yota.annakondr.su/spring">Conroe </a></li>
-						<li> <a href="https://www.yota.annakondr.su/spring">New Caney </a></li>
-						<li> <a href="https://www.yota.annakondr.su/spring">Klein </a></li>
-						<li> <a href="https://www.yota.annakondr.su/spring">Tomball </a></li>
-						<li> <a href="https://www.yota.annakondr.su/spring">Cypress </a></li>
-					</ul>
+					<a class="footer_menu_name" href="#header">home</a>
+					<div class="footer_menu_list"> 
+						<a class="footer_menu_name" href="#areas">service areas</a>
+						<a href="https://yotahomeservice.com/kingwood">Kingwood</a>
+						<a href="https://yotahomeservice.com/egypt">Egypt </a>
+						<a href="https://yotahomeservice.com/spring">Spring </a>
+						<a href="https://yotahomeservice.com/humble">Humble </a>
+						<a href="https://yotahomeservice.com/woodlands">Woodland </a>
+						<a href="https://yotahomeservice.com/conroe">Conroe </a>
+						<a href="https://yotahomeservice.com/new-caney">New Caney </a>
+						<a href="https://yotahomeservice.com/klein">Klein </a>
+						<a href="https://yotahomeservice.com/tomball">Tomball </a>
+						<a href="https://yotahomeservice.com/cypress">Cypress </a>
+					</div>
 				</div>
 			</div>
 			</div>
@@ -61,5 +62,6 @@
 			<div>Copyright 2023. All Rights Reserved </div>
 			<div class="footer_authorship_name">site by Natalia Shkodina </div>
 		</div>
+	</div>
 	</div>
 </footer>
